--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -325,6 +325,12 @@
                                                                         <label for="application-date">Foreign application filing date: <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
                                                                         <input type="date" class="form-control" id="application-date" name="applicationdate" value="">
                                                                     </div>
+                                                                    <div class="form-group form-group-md col-xs-12">
+                                                                        <p id="basisforeg">Note: Foreign Application Information provides a basis for filing and a priority date, but not a basis for registration.</p>                                                     					<div role="radiogroup" aria-labelledby="basisforeg" class="form-group form-group-md">
+                                                                            <label for="inlineRadio059" class="radio-inline radiocontainer block"><input type="radio" name="basisforfiling" id="inlineRadio059" value="relyon" tabindex="0"><span class="checkmark"></span>The applicant intends to rely on Foreign Registration as a basis for registration and requests that the application be suspended to await the submission of the foreign registration. If the applicant does not rely on Foreign Registration as basis, a valid claim of priority may be retained.</label>
+                                                                            <label for="inlineRadio060" class="radio-inline radiocontainer block"><input type="radio" name="basisforfiling" id="inlineRadio060" value="hasanother" tabindex="0"><span class="checkmark"></span>The applicant has another basis for registration (In Use or Intent to Use) and does NOT intend to rely on Foreign Registration as the basis, but is only asserting a valid claim of priority. The application should not be suspended.</label>
+                                                                        </div><!--END radiogroup-->
+                                                                	</div>
                                                                 </div><!--pending foreign-->
                                                                 <div class="row">
                                                                     <div class="appendapending col-xs-12"></div>
@@ -373,7 +379,7 @@
                                                                         <input type="date" class="form-control" id="renew-date" name="renewdate" value="">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
-                                                                        <p id="upimagethree">Provide an image of foreign registration certificate: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
+                                                                        <p id="upimagethree">Please provide a copy of the Foreign Registration Certificate. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                                         <div class="form-group form-group-md hidethis">
                                                                             <label class="small upload-drop-zone" for="1"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
                                                                             <input type="file" id="1" name="specimenfileupload" class="form-control" aria-labelledby="upimgtwo upimagethree">
@@ -498,6 +504,12 @@
                                                                         <label for="application-date">Foreign application filing date: <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
                                                                         <input type="date" class="form-control" id="application-date" name="applicationdate" value="">
                                                                     </div>
+                                                                    <div class="form-group form-group-md col-xs-12">
+                                                                        <p id="basisforeg">Note: Foreign Application Information provides a basis for filing and a priority date, but not a basis for registration.</p>                                                     					<div role="radiogroup" aria-labelledby="basisforeg" class="form-group form-group-md">
+                                                                            <label for="inlineRadio061" class="radio-inline radiocontainer block"><input type="radio" name="basisforfilingtwo" id="inlineRadio061" value="relyon" tabindex="0"><span class="checkmark"></span>The applicant intends to rely on Foreign Registration as a basis for registration and requests that the application be suspended to await the submission of the foreign registration. If the applicant does not rely on Foreign Registration as basis, a valid claim of priority may be retained.</label>
+                                                                            <label for="inlineRadio062" class="radio-inline radiocontainer block"><input type="radio" name="basisforfilingtwo" id="inlineRadio062" value="hasanother" tabindex="0"><span class="checkmark"></span>The applicant has another basis for registration (In Use or Intent to Use) and does NOT intend to rely on Foreign Registration as the basis, but is only asserting a valid claim of priority. The application should not be suspended.</label>
+                                                                        </div><!--END radiogroup-->
+                                                                	</div>
                                                                 </div><!--pending foreign-->
                                                                 <div class="row">
                                                                     <div class="appendapending col-xs-12"></div>
@@ -546,7 +558,7 @@
                                                                         <input type="date" class="form-control" id="renew-date" name="renewdate" value="">
                                                                     </div>
                                                                     <div class="form-group form-group-md col-xs-12">
-                                                                        <p id="upimagethree">Provide an image of foreign registration certificate: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
+                                                                        <p id="upimagethree">Please provide a copy of the Foreign Registration Certificate. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                                         <div class="form-group form-group-md hidethis">
                                                                             <label class="small upload-drop-zone" for="1"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
                                                                             <input type="file" id="1" name="specimenfileupload" class="form-control" aria-labelledby="upimgtwo upimagethree">
