--- a/additional_information.html
+++ b/additional_information.html
@@ -195,7 +195,7 @@
                                                 <div class="row">
                                                     <div class="col-xs-12">
                                                         <div class="col-xs-12 form-group form-group-md">
-                                                            <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                            <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -337,7 +337,7 @@
                                                             <div class="row">
                                                                 <div class="col-xs-12">
                                                                     <div class="col-xs-12 form-group form-group-md">
-                                                                        <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                        <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -469,7 +469,7 @@
                                                                 <div class="row">
                                                                     <div class="col-xs-12">
                                                                         <div class="col-xs-12 form-group form-group-md">
-                                                                            <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                            <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -605,7 +605,7 @@
                                                             <div class="row">
                                                                 <div class="col-xs-12">
                                                                     <div class="col-xs-12 form-group form-group-md">
-                                                                        <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                        <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -745,7 +745,7 @@
                                                             <div class="row">
                                                                 <div class="col-xs-12">
                                                                     <div class="col-xs-12 form-group form-group-md">
-                                                                        <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                        <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
                                                                     </div>
                                                                 </div>
                                                             </div>
@@ -881,7 +881,7 @@
                                                                 <div class="row">
                                                                     <div class="col-xs-12">
                                                                         <div class="col-xs-12 form-group form-group-md">
-                                                                            <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                            <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
                                                                         </div>
                                                                     </div>
                                                                 </div>
