--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -76,10 +76,10 @@
           	<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fees $225<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li id="firstli">Basic Fees $225</li>
-                <li>Extra Class Fee $0</li>
-                <li>Total Classes 0</li>
-                <li id="lastli">Total Fee $225</li>
+                <li id="firstli" role="status" aria-live="polite">Basic Fees $225</li>
+                <li role="status" aria-live="polite">Extra Class Fee $0</li>
+                <li role="status" aria-live="polite">Total Classes 0</li>
+                <li id="lastli" role="status" aria-live="polite">Total Fee $225</li>
               </ul>
             </li>
 		<!--<li><a href="#">Actions</a></li>
@@ -568,7 +568,7 @@
                                       </div>
                                       <div class="form-group form-group-md col-xs-12 col-md-7 col-lg-7">
                                         <label for="attorney-email" class="sr-only">Email address <span class="weight600">&#42;</span></label>
-                                        <input type="text" class="form-control" id="attorney-email" placeholder="email Address" th:field="*{attorneyEmail}" required>
+                                        <input type="email" class="form-control" id="attorney-email" placeholder="email Address" th:field="*{attorneyEmail}" required>
                                       </div>
                                       <div class="row phones">
                                          <div class="col-xs-12">
@@ -584,7 +584,7 @@
                                           	</div>
                                           	<div class="form-group form-group-md col-xs-6 col-sm-4">
                                             	<label for="attorney-phone">Phone number</label>
-                                            	<input type="text" class="form-control" id="attorney-phone" th:field="*{attorneyPhone}">
+                                            	<input type="tel" class="form-control" id="attorney-phone" th:field="*{attorneyPhone}">
                                           	</div>
                                             <div class="form-group form-group-md col-xs-9 col-sm-3">
                                               	<label for="attorney-ext">Ext.</label>
