--- a/create_account.html
+++ b/create_account.html
@@ -68,10 +68,10 @@
           	<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fees $225<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li id="firstli">Basic Fees $225</li>
-                <li>Extra Class Fee $0</li>
-                <li>Total Classes 0</li>
-                <li id="lastli">Total Fee $225</li>
+                <li id="firstli" role="status" aria-live="polite">Basic Fees $225</li>
+                <li role="status" aria-live="polite">Extra Class Fee $0</li>
+                <li role="status" aria-live="polite">Total Classes 0</li>
+                <li id="lastli" role="status" aria-live="polite">Total Fee $225</li>
               </ul>
             </li>
 		<!--<li><a href="#">Actions</a></li>
@@ -103,7 +103,7 @@
                                 <div class="row">
                                   <div class="form-group form-group-md col-xs-12 col-md-6">
                                       <label for="email">Email address <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to send correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
-                                      <input type="text" class="form-control" id="email" required>
+                                      <input type="email" class="form-control" id="email" required>
                                   </div>
                                 </div>
                                 <div class="row">
