--- a/declaration_signature.html
+++ b/declaration_signature.html
@@ -76,10 +76,10 @@
           	<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fees $225<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li id="firstli">Basic Fees $225</li>
-                <li>Extra Class Fee $0</li>
-                <li>Total Classes 0</li>
-                <li id="lastli">Total Fee $225</li>
+                <li id="firstli" role="status" aria-live="polite">Basic Fees $225</li>
+                <li role="status" aria-live="polite">Extra Class Fee $0</li>
+                <li role="status" aria-live="polite">Total Classes 0</li>
+                <li id="lastli" role="status" aria-live="polite">Total Fee $225</li>
               </ul>
             </li>
 		<!--<li><a href="#">Actions</a></li>
@@ -489,7 +489,7 @@
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12 col-sm-9 col-lg-6">
                                                                     <label for="signatoryphone">Signatory&#8217;s phone number</label>
-                                                                    <input type="text" class="form-control" id="signatoryphone">
+                                                                    <input type="tel" class="form-control" id="signatoryphone">
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-6">
                                                                     <label for="signatoryposition">Signatory&#8217;s position <span class="weight600">&#42;</span></label>
