--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -76,10 +76,10 @@
           	<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fees $225<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li id="firstli">Basic Fees $225</li>
-                <li>Extra Class Fee $0</li>
-                <li>Total Classes 0</li>
-                <li id="lastli">Total Fee $225</li>
+                <li id="firstli" role="status" aria-live="polite">Basic Fees $225</li>
+                <li role="status" aria-live="polite">Extra Class Fee $0</li>
+                <li role="status" aria-live="polite">Total Classes 0</li>
+                <li id="lastli" role="status" aria-live="polite">Total Fee $225</li>
               </ul>
             </li>
 		<!--<li><a href="#">Actions</a></li>
@@ -224,7 +224,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -281,7 +281,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div><!-- Drop Zone -->
@@ -395,7 +395,7 @@
                                                                         <div class="row">
                                                                             <div class="col-xs-12">
                                                                                 <div class="form-group form-group-md">
-                                                                                    <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                    <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
                                                                                 </div>
                                                                             </div>
                                                                         </div><!-- Drop Zone -->
@@ -407,7 +407,7 @@
                                                                         <div class="row">
                                                                             <div class="inlinebuttons btn-group btn-group-justified">
                                                                                 <div class="btn-group col-xs-6">
-                                                                                    <button type="button" class="btn btn-sm btn-success addinitial" id="addforeignreg_basisone">Add Additional Foreign Registration</button>
+                                                                                    <button type="submit" class="btn btn-sm btn-success addinitial" id="addforeignreg_basisone">Add Additional Foreign Registration</button>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -460,7 +460,7 @@
                                                                     <div class="row">
                                                                         <div class="col-xs-12">
                                                                             <div class="col-xs-12 form-group form-group-md">
-                                                                                <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
                                                                             </div>
                                                                         </div>
                                                                     </div><!-- Drop Zone -->
@@ -574,7 +574,7 @@
                                                                         <div class="row">
                                                                             <div class="col-xs-12">
                                                                                 <div class="form-group form-group-md">
-                                                                                    <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
+                                                                                    <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected files">Submit</button>
                                                                                 </div>
                                                                             </div>
                                                                         </div><!-- Drop Zone -->
