--- a/import_individual.html
+++ b/import_individual.html
@@ -77,7 +77,7 @@
                             <div class="row">
                               <div class="form-group form-group-md col-xs-12 col-md-6 col-lg-7">
                                 <label for="email">Email address <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to send correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
-                                <input type="text" class="form-control" id="email" name="email" th:field="*{ownerEmail}" required>
+                                <input type="email" class="form-control" id="email" name="email" th:field="*{ownerEmail}" required>
                               </div>
                               <div class="form-group form-group-md col-xs-12 col-md-6 col-lg-7">
                                 <label for="territory">Country/US Territor <span class="weight600">&#42;</span>y</label>
@@ -125,7 +125,7 @@
                               </div>
                               <div class="form-group form-group-md col-xs-12 col-md-7">
                                 <label for="webaddress">Website address</label>
-                                <input type="text" class="form-control" id="webaddress" th:field="*{ownerWebSite}">
+                                <input type="url" class="form-control" id="webaddress" th:field="*{ownerWebSite}">
                               </div>
                               <div class="row phones">
                                  <div class="col-xs-12">
