--- a/marks_designonly.html
+++ b/marks_designonly.html
@@ -75,10 +75,10 @@
           	<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fees $225<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li id="firstli">Basic Fees $225</li>
-                <li>Extra Class Fee $0</li>
-                <li>Total Classes 0</li>
-                <li id="lastli">Total Fee $225</li>
+                <li id="firstli" role="status" aria-live="polite">Basic Fees $225</li>
+                <li role="status" aria-live="polite">Extra Class Fee $0</li>
+                <li role="status" aria-live="polite">Total Classes 0</li>
+                <li id="lastli" role="status" aria-live="polite">Total Fee $225</li>
               </ul>
             </li>
 		<!--<li><a href="#">Actions</a></li>
@@ -200,7 +200,7 @@
                                         <div class="row">
                                             <div class="col-xs-12">
                                                 <div class="col-xs-12 form-group form-group-md">
-                                                    <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected images">Submit</button>
+                                                    <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected images">Submit</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -397,7 +397,7 @@
                                                                 <div class="row">
                                                                     <div class="col-xs-12">
                                                                         <div class="col-xs-12 form-group form-group-md">
-                                                                            <button type="button" class="btn-sm btn-success add ctr" aria-label="submit selected images">Submit</button>
+                                                                            <button type="submit" class="btn-sm btn-success add ctr" aria-label="submit selected images">Submit</button>
                                                                         </div>
                                                                     </div>
                                                                 </div>
