--- a/owner_info_corporation.html
+++ b/owner_info_corporation.html
@@ -77,10 +77,10 @@
           	<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fees $225<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li id="firstli">Basic Fees $225</li>
-                <li>Extra Class Fee $0</li>
-                <li>Total Classes 0</li>
-                <li id="lastli">Total Fee $225</li>
+                <li id="firstli" role="status" aria-live="polite">Basic Fees $225</li>
+                <li role="status" aria-live="polite">Extra Class Fee $0</li>
+                <li role="status" aria-live="polite">Total Classes 0</li>
+                <li id="lastli" role="status" aria-live="polite">Total Fee $225</li>
               </ul>
             </li>
 		<!--<li><a href="#">Actions</a></li>
@@ -208,7 +208,7 @@
                             <div class="row">
                                 <div class="form-group form-group-md col-xs-12 col-md-6">
                                     <label for="email">Email address <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="The USPTO will use this email address to send correspondence regarding this application or registration. It is critical to ensure this email address is current." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>
-                                    <input type="text" class="form-control" id="email" th:field="*{ownerEmail}" required>
+                                    <input type="email" class="form-control" id="email" th:field="*{ownerEmail}" required>
                                 </div>
                             </div>
                             <fieldset aria-labelledby="addressinfo">
@@ -256,7 +256,7 @@
                                     <div class="col-xs-12">
                                         <div class="form-group form-group-md col-xs-12 col-md-6">
                                             <label for="webaddress">Website address</label>
-                                            <input type="text" class="form-control" id="webaddress" th:field="*{ownerWebSite}">
+                                            <input type="url" class="form-control" id="webaddress" th:field="*{ownerWebSite}">
                                         </div>
                                     </div>
                                   </div>
@@ -274,7 +274,7 @@
                                         </div>
                                         <div class="form-group form-group-md col-xs-6 col-sm-4">
                                             <label for="phonenumber">Phone number</label>
-                                            <input type="text" class="form-control" id="phonenumber">
+                                            <input type="tel" class="form-control" id="phonenumber">
                                         </div>
                                         <div class="form-group form-group-md col-xs-9 col-sm-3">
                                             <label for="extension">Ext.</label>
