Marks Layout Change Req. + Disabled Custom Cursor for Dynamic, Scripted Content
Change req. to Marks Layout page, Custom Disabled Cursor to checkboxes disabled through scripting, dynamic content

--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -188,7 +188,6 @@
                                     </div>
                                     <div id="markoptions" class="collapse Accordion-panel" role="region" aria-labelledby="optionsbtn">
                                         <div class="Accordion form-group form-group-md">
-                                        	<p>Which of the following types best describes the mark you want to apply for? <span class="weight600">&#42;</span></p>
                                             <input class="form-check-input checkmark" type="checkbox" value="Certification" tabindex="0" aria-labelledby="certificationcheck" id="certcheck">
                                             <label class="form-check-label form-check hasinfo" for="certcheck" id="certcheck2"><span class="radio notspecial" id="certificationcheck">Certification</span></label><a href="#" data-toggle="modal" data-target="#tradeservmodal"><span class="glyphicon glyphicon-info-sign" aria-hidden="true" aria-label="more info about certification marks"></span></a>
                                             <!-- Modal -->
@@ -219,7 +218,8 @@
                                                     <h4 class="modal-title" id="collectmodallabel">Collective Mark</h4>
                                                   </div>
                                                   <div class="modal-body">
-                                                    <p>A collective mark is mark used by members of a collective organization to identify their goods and/or services and distinguish them from the goods and/or services of non-members. (<a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e347.html" target="_blank">See TMEP Section 1303</a><span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>)</p>                                           </div>
+                                                    <p>A collective mark is mark used by members of a collective organization to identify their goods and/or services and distinguish them from the goods and/or services of non-members. (<a href="https://tmep.uspto.gov/RDMS/TMEP/current#/current/TMEP-1300d1e347.html" target="_blank">See TMEP Section 1303</a><span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>)</p>                                           
+                                                  </div>
                                                   <div class="modal-footer">
                                                     <button type="button" class="btn btn-sm btn-success" data-dismiss="modal">Close</button>
                                                   </div>
@@ -242,11 +242,12 @@
                                                   <div class="modal-footer">
                                                     <button type="button" class="btn btn-sm btn-success" data-dismiss="modal">Close</button>
                                                   </div>
-                                                </div>
-                                              </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                               </div>
+                                           	</div>
+                                      	</div>
+                                        <p>Which of the following types best describes the mark you want to apply for? <span class="weight600">&#42;</span></p>
+                                      </div>
+                                 	</div>
                                 </fieldset>
                                 <script type="application/javascript" src="js/accordion.js"></script>
                                 <script type="application/javascript" src="js/checkbox.js"></script>
