Mark type question #282
Removed asterisk

--- a/marks_layout_M017.html
+++ b/marks_layout_M017.html
@@ -245,7 +245,7 @@
                                                </div>
                                            	</div>
                                       	</div>
-                                        <p>Which of the following types best describes the mark you want to apply for? <span class="weight600">&#42;</span></p>
+                                        <p>Which of the following types best describes the mark you want to apply for?</p>
                                       </div>
                                  	</div>
                                 </fieldset>
