--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -188,11 +188,12 @@
                                         <div class="row">
                                             <section aria-label="mark text">
                                             	<div class="col-xs-12">
-                                                	<p>Enter the word(s), letter(s) and/or number(s) you wish to register, e.g., <span class="uppercase">the cat&#8217;s meow</span>. Entries in this field must be found in the <a href="https://www.uspto.gov/trademark/standard-character-set" target="_blank">USPTO standard character set<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>. <span class="required weight600">&#42;</span></p>
+                                                	<p class="weight600" aria-level="3">Mark Literal <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
+                                                	<p>Enter the word(s), letter(s) and/or number(s) you wish to register, e.g., <span class="uppercase">the cat&#8217;s meow</span>. Entries in this field must be found in the <a href="https://www.uspto.gov/trademark/standard-character-set" target="_blank">USPTO standard character set<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>  <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a>.</p>
                                                 </div>
                                                 <div class="col-xs-12 col-md-6 form-group form-group-md" id="entertext">
-                                                    <label for="ta2" class="sr-only">Enter mark text</label> 
-                                                    <textarea id="ta2" rows="6" wrap="hard" class="form-control" required></textarea>
+                                                    <label for="ta2standard" class="sr-only">Enter mark text</label> 
+                                                    <textarea id="ta2standard" rows="6" wrap="hard" class="form-control" required></textarea>
                                                 </div>
                                                 <div class="col-xs-12 col-md-6 form-group form-group-md" id="displaytext">
                                                     <p id="showmarktxt"></p>
