--- a/marks_stylized.html
+++ b/marks_stylized.html
@@ -207,8 +207,8 @@
                                    </div>
                                 </div>
                                 <div class="form-group form-group-md col-xs-12">
-                                    <p class="weight600" role="heading" aria-level="3">Mark Literal</p>
-                                    <label for="ta2">Enter the words, letters and numbers appearing in the mark. <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label> 
+                                    <p class="weight600" aria-level="3">Mark Literal <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
+                                    <label for="ta2">Enter the word(s), letter(s) and/or number(s) you wish to register, e.g., <span class="uppercase">the cat&#8217;s meow</span>. Entries in this field must be found in the <a href="https://www.uspto.gov/trademark/standard-character-set" target="_blank">USPTO standard character set<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>  <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a>.</label> 
                                     <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                         <div class="row">
                                             <div class="col-xs-12">
