--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -238,8 +238,8 @@
                                     <div id="yesforeignentity" role="region" aria-labelledby="usforeign">
                                         <fieldset aria-labelledby="entitytype">
                                             <div class="row">
-                                              <div class="form-group form-group-md col-xs-6">
-                                                <label for="entitycountry">Please select country:</label>
+                                              <div class="form-group form-group-md col-xs-12 col-lg-6">
+                                                <label for="entitycountry">Please select citizenship or country where legally organized:</label>
                                                 <select class="form-control" id="entitycountry">
                                                   <option value="Select">Select</option>
                                                   <option value="albania">Albania</option>
@@ -248,7 +248,7 @@
                                                   <option value="bahamas">Bahamas</option>
                                                 </select>
                                               </div>
-                                              <div class="form-group form-group-md col-xs-6" id="switchselect">
+                                              <div class="form-group form-group-md col-xs-12 col-lg-6" id="switchselect">
                                               	<div class="row">
                                                     <div class="col-xs-12 albaniaform">
                                                         <label for="entypeforeignalbania">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
